--- a/business_gemini_session.json.example
+++ b/business_gemini_session.json.example
@@ -1,6 +1,7 @@
 {
     "proxy": "http://127.0.0.1:7890",
 	"image_base_url": "http://127.0.0.1:8000/",
+    "apikey": "sk-your-api-key-here",
     "accounts": [
     ],
     "models": [
